--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
-	"name": "scraping-by",
-	"version": "0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"test": "vitest",
-		"d1:gen": "drizzle-kit generate:sqlite --config=drizzleD1.config.ts",
-		"d1:mig:local": "wrangler d1 migrations apply cloudflare_fullstack_db --local",
-		"d1:mig:prod": "wrangler d1 migrations apply cloudflare_fullstack_db ",
-		"wrangler": "wrangler pages dev ./.svelte-kit/cloudflare  --env staging  "
-	},
-	"devDependencies": {
-		"@eslint/compat": "^1.2.9",
-		"@eslint/js": "^9.26.0",
-		"@sveltejs/kit": "^2.20.8",
-		"@sveltejs/vite-plugin-svelte": "^5.0.3",
-		"@tailwindcss/vite": "^4.1.6",
-		"@types/node": "^22.15.17",
-		"drizzle-kit": "^0.31.1",
-		"eslint": "^9.26.0",
-		"eslint-config-prettier": "^10.1.5",
-		"eslint-plugin-svelte": "^3.5.1",
-		"flowbite-svelte": "1.1.0",
-		"flowbite-svelte-icons": "^2.1.1",
-		"globals": "^16.1.0",
-		"jsdom": "^26.1.0",
-		"prettier": "^3.5.3",
-		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
-		"svelte": "^5.28.2",
-		"svelte-check": "^4.1.7",
-		"svelte-lib-helpers": "^0.4.28",
-		"tailwindcss": "^4.1.6",
-		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.32.0",
-		"vite": "^6.3.5",
-		"vitest": "^3.1.3"
-	},
-	"dependencies": {
-		"@cloudflare/workers-types": "^4.20250510.0",
-		"@sveltejs/adapter-cloudflare": "^7.0.3",
-		"drizzle-orm": "^0.43.1",
-		"puppeteer": "^24.8.2"
-	}
+  "name": "scraping-by",
+  "version": "0.1",
+  "type": "module",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "prepare": "svelte-kit sync || echo ''",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "test": "vitest",
+    "d1:gen": "drizzle-kit generate:sqlite --config=drizzle.config.ts",
+    "d1:mig:local": "wrangler d1 migrations apply cloudflare_fullstack_db --local",
+    "d1:mig:prod": "wrangler d1 migrations apply cloudflare_fullstack_db ",
+    "wrangler": "wrangler pages dev ./.svelte-kit/cloudflare  --env staging  "
+  },
+  "devDependencies": {
+    "@eslint/compat": "^1.2.9",
+    "@eslint/js": "^9.26.0",
+    "@sveltejs/kit": "^2.20.8",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/vite": "^4.1.6",
+    "@types/node": "^22.15.17",
+    "drizzle-kit": "^0.31.1",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-svelte": "^3.5.1",
+    "flowbite-svelte": "1.1.0",
+    "flowbite-svelte-icons": "^2.1.1",
+    "globals": "^16.1.0",
+    "jsdom": "^26.1.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-svelte": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "svelte": "^5.28.2",
+    "svelte-check": "^4.1.7",
+    "svelte-lib-helpers": "^0.4.28",
+    "tailwindcss": "^4.1.6",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.0",
+    "vite": "^6.3.5",
+    "vitest": "^3.1.3",
+    "@cloudflare/workers-types": "^4.20250510.0"
+  },
+  "dependencies": {
+    "@sveltejs/adapter-cloudflare": "^7.0.3",
+    "drizzle-orm": "^0.43.1",
+    "puppeteer": "^24.8.2"
+  }
 }
