--- a/package.json
+++ b/package.json
@@ -15,36 +15,36 @@
     "wrangler": "wrangler pages dev ./.svelte-kit/cloudflare  --env staging  "
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.9",
-    "@eslint/js": "^9.26.0",
-    "@sveltejs/kit": "^2.20.8",
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/vite": "^4.1.6",
-    "@types/node": "^22.15.17",
+    "@cloudflare/workers-types": "^4.20250617.0",
+    "@eslint/compat": "^1.3.0",
+    "@eslint/js": "^9.29.0",
+    "@sveltejs/kit": "^2.21.5",
+    "@sveltejs/vite-plugin-svelte": "^5.1.0",
+    "@tailwindcss/vite": "^4.1.10",
+    "@types/node": "^22.15.32",
     "drizzle-kit": "^0.31.1",
-    "eslint": "^9.26.0",
+    "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-svelte": "^3.5.1",
+    "eslint-plugin-svelte": "^3.9.2",
     "flowbite-svelte": "1.1.0",
-    "flowbite-svelte-icons": "^2.1.1",
-    "globals": "^16.1.0",
+    "flowbite-svelte-icons": "^2.2.1",
+    "globals": "^16.2.0",
     "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
-    "prettier-plugin-svelte": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "svelte": "^5.28.2",
-    "svelte-check": "^4.1.7",
-    "svelte-lib-helpers": "^0.4.28",
-    "tailwindcss": "^4.1.6",
+    "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.12",
+    "svelte": "^5.34.3",
+    "svelte-check": "^4.2.1",
+    "svelte-lib-helpers": "^0.4.30",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.0",
+    "typescript-eslint": "^8.34.1",
     "vite": "^6.3.5",
-    "vitest": "^3.1.3",
-    "@cloudflare/workers-types": "^4.20250510.0"
+    "vitest": "^3.2.3"
   },
   "dependencies": {
-    "@sveltejs/adapter-cloudflare": "^7.0.3",
+    "@sveltejs/adapter-cloudflare": "^7.0.4",
     "drizzle-orm": "^0.43.1",
-    "puppeteer": "^24.8.2"
+    "puppeteer": "^24.10.1"
   }
 }
