--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "preview": "vite preview",
     "prepare": "svelte-kit sync || echo ''",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "test": "vitest",
     "d1:gen": "drizzle-kit generate:sqlite --config=drizzle.config.ts",
     "d1:mig:local": "wrangler d1 migrations apply cloudflare_fullstack_db --local",
     "d1:mig:prod": "wrangler d1 migrations apply cloudflare_fullstack_db ",
@@ -21,15 +20,14 @@
     "@sveltejs/kit": "^2.21.5",
     "@sveltejs/vite-plugin-svelte": "^5.1.0",
     "@tailwindcss/vite": "^4.1.10",
-    "@types/node": "^22.15.32",
+    "@types/node": "^24.0.3",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-svelte": "^3.9.2",
-    "flowbite-svelte": "1.1.0",
+    "flowbite-svelte": "1.7.1",
     "flowbite-svelte-icons": "^2.2.1",
     "globals": "^16.2.0",
-    "jsdom": "^26.1.0",
     "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.6.12",
@@ -39,12 +37,11 @@
     "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.1",
-    "vite": "^6.3.5",
-    "vitest": "^3.2.3"
+    "vite": "^6.3.5"
   },
   "dependencies": {
     "@sveltejs/adapter-cloudflare": "^7.0.4",
-    "drizzle-orm": "^0.43.1",
+    "drizzle-orm": "^0.44.2",
     "puppeteer": "^24.10.1"
   }
 }
