--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "@cloudflare/puppeteer": "^1.0.2",
     "@sveltejs/adapter-cloudflare": "^7.0.4",
-    "drizzle-orm": "^0.44.2",
-    "puppeteer": "^24.10.1"
+    "drizzle-orm": "^0.44.2"
   }
 }
